--- a/materialpro-vuetify-main/package.json
+++ b/materialpro-vuetify-main/package.json
@@ -26,7 +26,9 @@
     "vuetify": "^2.3.14",
     "vuetify-datetime-picker": "^2.1.1",
     "vuex": "^3.5.1",
-    "vuex-persistedstate": "^4.0.0"
+    "vuex-persistedstate": "^4.0.0",
+    "vue-step-wizard": "^0.1.17",
+    "vue2-timepicker": "^1.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.7",
