--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.12",
     "vue-echarts": "^6.0.2",
     "vue-i18n": "^8.22.0",
+    "vue-json-csv": "^2.1.0",
     "vue-router": "^3.4.6",
     "vue-step-wizard": "^0.1.17",
     "vue-the-mask": "^0.11.1",
