--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.16.1",
     "echarts": "^5.3.0",
     "moment": "^2.29.1",
+    "sweet-alert-vuetify": "^1.3.0",
     "v-calendar": "^2.4.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.6.12",
